style: fix overflowing content in small screen

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -550,7 +550,7 @@ textarea.wiki-content {
 }
 
 .doc-content {
-	width: 900px;
+	max-width: 900px;
 	margin: auto;
 
 	.from-markdown {
